# AstandyClient

./: README.md  pyproject.toml
Astandy/: __init__.py  client.py  parser.py
Astandy/old_generated/: __init__.py  listeners.py  schemes_pb2.py  schemes_pb2.pyi  services.py
Astandy/schemes/: messages.proto  messages_pb2.py  messages_pb2.pyi
Astandy/services/: bolt.py  handshake.py  hello.py  player.py
Astandy/types/: __init__.py  rpc_target.py
docs/: changelog.md  examples.md  index.md  migration.md  raw.md  reference.md
tests/: __init__.py  communication_test.py  player_test.py
